updated AppNav and Sidebar

--- a/src/components/AppNav/AppNav.module.css
+++ b/src/components/AppNav/AppNav.module.css
@@ -22,6 +22,11 @@
   border-radius: 5px;
 }
 
+.nav a:hover,
+.nav a:active {
+  cursor: pointer;
+}
+
 /* CSS Modules feature */
 .nav a:global(.active) {
   background-color: var(--color-dark--0);
